# tripo-mcp

./: .env.example  .gitignore  LICENSE  README.md  mcp.json.example  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py  models.py  tripo_api.py
